[gd_scene load_steps=4 format=3 uid="uid://c2alldfmmilok"]

[ext_resource type="PackedScene" uid="uid://707jn05r3xdx" path="res://models/tiles/straight/tile_straight.glb" id="1_qe748"]
[ext_resource type="Script" path="res://scenes/tiles/tiles.gd" id="2_uxpc5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_u8s57"]
size = Vector3(2, 0.2, 2)

[node name="tile_straight" instance=ExtResource("1_qe748")]
script = ExtResource("2_uxpc5")

[node name="Area3D" type="Area3D" parent="." index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_u8s57")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
